--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -211,9 +211,9 @@
      */
     --GW-sequential-nav-link-background-color: var(--GW-body-background-color);
 
-    /*  Page-specific styles.
-     */
-    --GW-index-page-bottom-ornament-line-color: #808080;
+	/*	Footer.
+	 */
+    --GW-bottom-ornament-line-color: #000;
 
 	/*	Pop-frames (popups or popins).
 	 */
@@ -2008,9 +2008,9 @@ body.special-halloween-dark h6 {
      */
     --GW-sequential-nav-link-background-color: var(--GW-body-background-color);
 
-    /*  Page-specific styles.
-     */
-    --GW-index-page-bottom-ornament-line-color: #9f9f9f;
+	/*	Footer.
+	 */
+    --GW-bottom-ornament-line-color: #fff;
 
 	/*	Pop-frames (popups or popins).
 	 */
@@ -3859,7 +3859,7 @@ ReaderMode = {
                 position: absolute;
                 width: 100%;
                 height: 0;
-                border-bottom: 1px dotted var(--GW-index-page-bottom-ornament-line-color);
+                border-bottom: 1px dotted var(--GW-bottom-ornament-line-color);
                 left: 0;
                 top: 50%;
                 z-index: -1;
