--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -1113,6 +1113,7 @@ div.TOC ul > li::before {
     right: calc(100% - 1em);
     left: unset;
     width: 111px;
+    height: initial;
     padding: 0;
     text-align: right;
     font-weight: normal;
