--- a/template/default.html
+++ b/template/default.html
@@ -46,9 +46,9 @@
     <meta name="og:type" content="article">
     $if(description)$<meta name="description" content="$description$">
     <meta name="og:description" content="$description$">$endif$
-    $if(thumbnail)$<meta property="og:image" content="https://gwern.net$thumbnailSmall$">
+    $if(thumbnail)$<meta property="og:image" content="https://gwern.net$thumbnail$">
     $if(thumbnailText)$<meta property="og:image:alt" content="$thumbnailText$">$endif$
-    $else$<meta property="og:image" content="https://gwern.net/static/img/logo/logo-whitebg-large-border.png-530px.jpg">
+    $else$<meta property="og:image" content="https://gwern.net/static/img/logo/logo-whitebg-large-border.png">
     <meta property="og:image:alt" content="Default thumbnail text: the Gwern.net site logo, a logotype of a large blackletter fraktur capital letter 'G' on a white background.">$endif$
     <meta property="og:image:height" content="$thumbnailHeight$">
     <meta property="og:image:width" content="$thumbnailWidth$">
