Fix image-focus bug with images that fail to load

--- a/css/default.css
+++ b/css/default.css
@@ -3331,6 +3331,7 @@ body.index-directory #footer {
     bottom: 0;
     left: 0;
     right: 0;
+    overflow: hidden;
 }
 
 /*=-------------------=*/
